syntax = "proto3";

package app.protobuf.messaging.model;
option java_multiple_files=true;

enum Sentiment {
  HAPPY = 0;
  SLEEPY = 1;
  ANGRY = 2;
}

message HelloRequest {
  string firstName = 1;
  string lastname = 2;
  int64 age = 3;
  Sentiment sentiment=4;
  repeated string hobbies=5;
  map<string,string> bagOfTricks=6;
}
message HelloResponse {
  string greeting=1;
}
service GreetingService {
  rpc greeting(HelloRequest) returns (HelloResponse);
}
